--- a/Philipp Lackner Cource Android Studio/app/src/main/AndroidManifest.xml
+++ b/Philipp Lackner Cource Android Studio/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <service android:name=".MyIntentService"/>
+        <service android:name=".MyService"/>
     </application>
 
 </manifest>
