--- a/FirebaseCourceByPhillipLackner/gradle/wrapper/gradle-wrapper.properties
+++ b/FirebaseCourceByPhillipLackner/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Mar 10 20:35:21 ICT 2021
+#Wed Mar 10 21:38:28 ICT 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
