--- a/FirebaseCourceByPhillipLackner/app/build.gradle
+++ b/FirebaseCourceByPhillipLackner/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 }
