--- a/FirebaseCourceByPhillipLackner/app/build.gradle
+++ b/FirebaseCourceByPhillipLackner/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:20.0.3'
+    implementation 'com.google.firebase:firebase-firestore-ktx:22.1.1'
+    implementation 'com.google.firebase:firebase-firestore:22.1.1'
+//jangan lupa tambahkan ktx setelah kata firestore
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
