--- a/FirebaseCourceByPhillipLackner/app/build.gradle
+++ b/FirebaseCourceByPhillipLackner/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation 'com.google.firebase:firebase-firestore-ktx:22.1.1'
     implementation 'com.google.firebase:firebase-firestore:22.1.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.2.1'
 //jangan lupa tambahkan ktx setelah kata firestore
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
